--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.9.4
 argparse==1.2.1
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-mathfilters==0.4.0
 django-toolbelt==0.0.1
 gunicorn==19.1.1
 psycopg2==2.5.4
