--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==1.11.6
 django-heroku==0.2.0
 django-mathfilters==0.4.0
 django-publications==0.6.2
+django-ratelimit==1.1.0
+django-recaptcha==1.3.1
 django-registration-redux==1.8
 gunicorn==19.7.1
 model-mommy==1.4.0
@@ -12,4 +14,5 @@ psycopg2==2.7.3.2
 pytz==2017.3
 six==1.11.0
 sympy==1.1.1
+typing==3.6.4
 whitenoise==3.3.1
