Upgrade to django 2.2.1

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ name = "pypi"
 dj-database-url = "==0.5.0"
 django-heroku = "==0.3.1"
 django-mathfilters = "==0.4.0"
-django-publications = "==0.6.2"
+django-publications = {editable = true, ref = "5a75cf88cf794937711b6850ff2acb07fe005f08", git = "https://github.com/lucastheis/django-publications.git"}
 django-ratelimit = "==1.1.0"
 django-recaptcha = "==1.3.1"
 django-registration-redux = "==1.8"
@@ -21,8 +21,8 @@ six = "==1.11.0"
 sympy = "==1.1.1"
 typing = "==3.6.4"
 whitenoise = "==3.3.1"
-Django = "==1.11.15"
-model_mommy = "==1.4.0"
+Django = "==2.2.1"
+model_mommy = "==1.6.0"
 Pillow = "==5.0.0"
 
 [requires]
