--- a/Pipfile
+++ b/Pipfile
@@ -1,7 +1,7 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
 
 [dev-packages]
 
@@ -9,15 +9,16 @@ name = "pypi"
 dj-database-url = "==0.5.0"
 django-heroku = "==0.3.1"
 django-mathfilters = "==0.4.0"
-django-publications = {editable = true, ref = "19dd80fef4d1defc6d553eaddab5aa028b0d4f57", git = "https://github.com/rschwiebert/django-publications.git"}
-django-ratelimit = "==1.1.0"
-django-recaptcha = "==1.3.1"
+django-publications = {editable = true,git = "https://github.com/rschwiebert/django-publications.git",ref = "19dd80fef4d1defc6d553eaddab5aa028b0d4f57"}
+django-ratelimit = "==2.0.0"
+django-recaptcha = "==2.0.4"
 django-registration-redux = "==2.6"
 gunicorn = "==19.7.1"
 mpmath = "==1.0.0"
-"psycopg2" = "==2.7.3.2"
+psycopg2 = "==2.7.3.2"
 pytz = "==2017.3"
 six = "==1.11.0"
+sqlparse = "==0.3.0"
 sympy = "==1.1.1"
 typing = "==3.6.4"
 whitenoise = "==3.3.1"
