Update some versions.

--- a/Pipfile
+++ b/Pipfile
@@ -9,22 +9,22 @@ verify_ssl = true
 dj-database-url = "==0.5.0"
 django-heroku = "==0.3.1"
 django-mathfilters = "==0.4.0"
-django-publications = {editable = true,git = "https://github.com/rschwiebert/django-publications.git",ref = "19dd80fef4d1defc6d553eaddab5aa028b0d4f57"}
+django-publications = {git = "https://github.com/rschwiebert/django-publications.git",ref = "19dd80fef4d1defc6d553eaddab5aa028b0d4f57"}
 django-ratelimit = "==2.0.0"
 django-recaptcha = "==2.0.4"
 django-registration-redux = "==2.6"
 gunicorn = "==19.7.1"
+model-mommy = "==1.6.0"
 mpmath = "==1.0.0"
-psycopg2 = "==2.7.3.2"
+psycopg2-binary = "==2.8.4"
 pytz = "==2017.3"
 six = "==1.11.0"
 sqlparse = "==0.3.0"
 sympy = "==1.1.1"
 typing = "==3.6.4"
-whitenoise = "==3.3.1"
-Django = "==2.2.1"
-model_mommy = "==1.6.0"
-Pillow = "==5.0.0"
+whitenoise = "==5.0.1"
+Django = "==2.2.12"
+Pillow = "==7.1.2"
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
