--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ gunicorn = "==20.1.0"
 model-mommy = "==1.6.0"
 mpmath = "==1.0.0"
 psycopg2-binary = "==2.8.4"
+psycopg2 = "==2.8.4"
 pytz = "==2017.3"
 six = "==1.11.0"
 sqlparse = "==0.3.0"
