--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ sympy = "==1.9"
 whitenoise = "==5.0.1"
 Django = "==3.2.13"
 Pillow = "==9.0.1"
+pyyaml = "*"
 
 [requires]
 python_version = "3.10"
