--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ verify_ssl = true
 dj-database-url = "==0.5.0"
 django-heroku = "==0.3.1"
 django-mathfilters = "==0.4.0"
-django-publications = {git = "https://github.com/rschwiebert/django-publications.git",ref = "19dd80fef4d1defc6d553eaddab5aa028b0d4f57"}
+django-publications = "==1.1.0"
 django-ratelimit = "==2.0.0"
 django-recaptcha = "==2.0.4"
 django-registration-redux = "==2.6"
