--- a/Pipfile
+++ b/Pipfile
@@ -24,7 +24,8 @@ sympy = "==1.9"
 whitenoise = "==5.0.1"
 Django = "==3.2.13"
 Pillow = "==9.0.1"
-pyyaml = "*"
+pyyaml = "6.0"
+dart-data = {git = "https://github.com/rschwiebert/dart_data.git"}
 
 [requires]
 python_version = "3.10"
