Correct poetry stuff after resolving local problem.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.24.0; python_version >= "3.7"
 botocore==1.27.2; python_version >= "3.7"
 dart-data @ git+https://github.com/rschwiebert/dart_data.git@master
 dj-database-url==0.5.0
+django-heroku==0.3.1
 django-mathfilters==0.4.0
 django-publications==1.1.0
 django-ratelimit==2.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
@@ -14,7 +15,7 @@ jmespath==1.0.0; python_version >= "3.7"
 model-mommy==1.6.0
 mpmath==1.2.1
 pillow==9.0.1; python_version >= "3.7"
-psycopg2-binary==2.9.3; python_version >= "3.6"
+psycopg2==2.9.3; python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 pytz==2021.3
 pyyaml==6.0; python_version >= "3.6"
