--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ sqlparse = "0.3.0"
 sympy = "1.9"
 whitenoise = "5.0.1"
 dart-data = {git = "https://github.com/rschwiebert/dart_data.git"}
-psycopg2-binary = "2.9.3"
+psycopg2 = "2.9.3"
+django-heroku = "0.3.1"
 
 [tool.poetry.dev-dependencies]
 
