--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
-asgiref==3.5.1; python_version >= "3.7"
-boto3==1.24.0; python_version >= "3.7"
-botocore==1.27.2; python_version >= "3.7"
-dart-data @ git+https://github.com/rschwiebert/dart_data.git@4fcb04d
-dj-database-url==0.5.0
-django-heroku==0.3.1
-django-mathfilters==0.4.0
-django-publications==1.1.0
-django-ratelimit==2.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-django-recaptcha==2.0.6
-django-registration-redux==2.9
-django==3.2.16; python_version >= "3.6"
-gunicorn==20.1.0; python_version >= "3.5"
-jmespath==1.0.0; python_version >= "3.7"
-model-mommy==1.6.0
-mpmath==1.2.1
-pillow==9.0.1; python_version >= "3.7"
-psycopg2==2.9.3; python_version >= "3.6"
-python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-pytz==2021.3
-pyyaml==6.0; python_version >= "3.6"
-s3transfer==0.6.0; python_version >= "3.7"
-six==1.11.0
-sqlparse==0.3.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-sympy==1.9; python_version >= "3.6"
-urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
-whitenoise==5.0.1; python_version >= "3.5" and python_version < "4"
+asgiref==3.5.1 ; python_version >= "3.10" and python_version < "4.0"
+boto3==1.24.0 ; python_version >= "3.10" and python_version < "4.0"
+botocore==1.27.96 ; python_version >= "3.10" and python_version < "4.0"
+dart-data @ git+https://github.com/rschwiebert/dart_data.git@HEAD ; python_version >= "3.10" and python_version < "4.0"
+dj-database-url==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
+django-mathfilters==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
+django-publications==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
+django-ratelimit==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
+django-recaptcha==2.0.6 ; python_version >= "3.10" and python_version < "4.0"
+django-registration-redux==2.9 ; python_version >= "3.10" and python_version < "4.0"
+django==3.2.18 ; python_version >= "3.10" and python_version < "4.0"
+gunicorn==20.1.0 ; python_version >= "3.10" and python_version < "4.0"
+jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
+model-mommy==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
+mpmath==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
+pillow==9.3.0 ; python_version >= "3.10" and python_version < "4.0"
+psycopg2==2.9.3 ; python_version >= "3.10" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
+pytz==2021.3 ; python_version >= "3.10" and python_version < "4.0"
+pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
+s3transfer==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==67.4.0 ; python_version >= "3.10" and python_version < "4.0"
+six==1.11.0 ; python_version >= "3.10" and python_version < "4.0"
+sqlparse==0.3.0 ; python_version >= "3.10" and python_version < "4.0"
+sympy==1.9 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==1.26.14 ; python_version >= "3.10" and python_version < "4.0"
+whitenoise==5.0.1 ; python_version >= "3.10" and python_version < "4"
