--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ six = "1.11.0"
 sqlparse = "0.3.0"
 sympy = "1.9"
 whitenoise = "5.0.1"
-dart-data = {git = "https://github.com/rschwiebert/dart_data.git"}
+dart-data = {git = "https://github.com/rschwiebert/dart_data.git", branch="master"}
 psycopg2 = "2.9.3"
 django-heroku = "0.3.1"
 
