--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.5.1 ; python_version >= "3.10" and python_version < "4.0"
 boto3==1.24.0 ; python_version >= "3.10" and python_version < "4.0"
 botocore==1.27.96 ; python_version >= "3.10" and python_version < "4.0"
-dart-data @ git+https://github.com/rschwiebert/dart_data.git@master ; python_version >= "3.10" and python_version < "4.0"
+dart-data @ git+https://github.com/rschwiebert/dart_data.git@b1e69d0413a9e807d5441defece070bb97499fc1 ; python_version >= "3.10" and python_version < "4.0"
 dj-database-url==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
 django-mathfilters==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
