--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 asgiref = "3.5.1"
 boto3 = "1.24.0"
 dj-database-url = "0.5.0"
-Django = "3.2.20"
+Django = "3.2.21"
 django-mathfilters = "0.4.0"
 django-publications = "1.1.0"
 django-ratelimit = "2.0.0"
@@ -24,11 +24,14 @@ pytz = "2021.3"
 PyYAML = "6.0"
 six = "1.11.0"
 sqlparse = "0.4.4"
-sympy = "1.9"
+sympy = "1.12"
 whitenoise = "5.0.1"
-dart-data = {git = "https://github.com/rschwiebert/dart_data.git", rev="b1e69d0413a9e807d5441defece070bb97499fc1"}
+dart-data = {git = "https://github.com/rschwiebert/dart_data.git", rev="7e4b493a51905b1d84f70aa9e721671aaffed679"}
 psycopg2 = "2.9.3"
 django-heroku = "0.3.1"
+requests = "2.31.0"
+cryptography = "41.0.3"
+wheel = "0.38.1"
 
 [tool.poetry.dev-dependencies]
 
