--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.5.1 ; python_version >= "3.10" and python_version < "4.0"
 boto3==1.24.0 ; python_version >= "3.10" and python_version < "4.0"
 botocore==1.27.96 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2023.7.22 ; python_version >= "3.10" and python_version < "4.0"
+cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
+cryptography==41.0.3 ; python_version >= "3.10" and python_version < "4.0"
 dart-data @ git+https://github.com/rschwiebert/dart_data.git@7e4b493a51905b1d84f70aa9e721671aaffed679 ; python_version >= "3.10" and python_version < "4.0"
 dj-database-url==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -9,20 +13,24 @@ django-publications==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
 django-ratelimit==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 django-recaptcha==2.0.6 ; python_version >= "3.10" and python_version < "4.0"
 django-registration-redux==2.9 ; python_version >= "3.10" and python_version < "4.0"
-django==3.2.20 ; python_version >= "3.10" and python_version < "4.0"
+django==3.2.21 ; python_version >= "3.10" and python_version < "4.0"
 gunicorn==20.1.0 ; python_version >= "3.10" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 model-mommy==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.0.1 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2==2.9.3 ; python_version >= "3.10" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2021.3 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
-s3transfer==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==67.4.0 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
+s3transfer==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==68.2.2 ; python_version >= "3.10" and python_version < "4.0"
 six==1.11.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.10" and python_version < "4.0"
-sympy==1.9 ; python_version >= "3.10" and python_version < "4.0"
+sympy==1.12 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==1.26.18 ; python_version >= "3.10" and python_version < "4.0"
+wheel==0.38.1 ; python_version >= "3.10" and python_version < "4.0"
 whitenoise==5.0.1 ; python_version >= "3.10" and python_version < "4"
