Added signal hooks to relation model to propagate property-metaproperty deductions (just using python code) Added Dockerfile for developers to use to run the server locally.

--- a/ringapp/local_settings.py.example
+++ b/ringapp/local_settings.py.example
@@ -5,5 +5,15 @@ print('Importing local settings!')
 print('*************************')
 
 DEBUG = True
-DATABASES['default']['OPTIONS']['sslmode'] = 'disable'
 SECURE_SSL_REDIRECT = False
+
+WEB_SQLITE_PATH = os.path.join(BASE_DIR, 'db', 'web.db')
+
+DATABASES['default'] = {
+    'ENGINE': 'django.db.backends.sqlite3',
+    'NAME': WEB_SQLITE_PATH
+}
+DATABASES['test'] = DATABASES['default'].copy()
+DATABASES['test']['NAME'] = 'test_ringapp'
+
+#INSTALLED_APPS.append('django_extensions')
