--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ asgiref==3.5.1 ; python_version >= "3.10" and python_version < "4.0"
 boto3==1.24.0 ; python_version >= "3.10" and python_version < "4.0"
 botocore==1.27.96 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.2.2 ; python_version >= "3.10" and python_version < "4.0"
-cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
-cryptography==41.0.6 ; python_version >= "3.10" and python_version < "4.0"
+cryptography==42.0.0 ; python_version >= "3.10" and python_version < "4.0"
 dart-data @ git+https://github.com/rschwiebert/dart_data.git@49953d3885693dc6d8fdf8df0be561b0532d39bb ; python_version >= "3.10" and python_version < "4.0"
 dj-database-url==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -21,7 +21,8 @@ model-mommy==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.2.0 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2==2.9.3 ; python_version >= "3.10" and python_version < "4.0"
-pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
+pyopenssl==24.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2021.3 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
