--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ idna==3.6 ; python_version >= "3.10" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 model-mommy==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+pexpect==4.8.0 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.2.0 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2==2.9.3 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
