--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2024.2.2 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==42.0.4 ; python_version >= "3.10" and python_version < "4.0"
-dart-data @ git+https://github.com/rschwiebert/dart_data.git@49953d3885693dc6d8fdf8df0be561b0532d39bb ; python_version >= "3.10" and python_version < "4.0"
+dart-data @ git+https://github.com/rschwiebert/dart_data.git@b10492302ff59b71b6e3ade698584c0f1e649e2f ; python_version >= "3.10" and python_version < "4.0"
 dj-database-url==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
 django-mathfilters==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -14,11 +14,12 @@ django-ratelimit==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 django-recaptcha==2.0.6 ; python_version >= "3.10" and python_version < "4.0"
 django-registration-redux==2.9 ; python_version >= "3.10" and python_version < "4.0"
 django==3.2.24 ; python_version >= "3.10" and python_version < "4.0"
-gunicorn==20.1.0 ; python_version >= "3.10" and python_version < "4.0"
+gunicorn==22.0.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 model-mommy==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+packaging==24.0 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.3.0 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2==2.9.3 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
@@ -28,7 +29,6 @@ pytz==2021.3 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
 s3transfer==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==69.0.3 ; python_version >= "3.10" and python_version < "4.0"
 six==1.11.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.10" and python_version < "4.0"
