Update Dockerfile documentation - At some point development broke the db_to_data import feature - This commit contains tweaks to restore functionality.

--- a/ringapp/local_settings.py.example
+++ b/ringapp/local_settings.py.example
@@ -6,6 +6,7 @@ print('*************************')
 
 DEBUG = True
 SECURE_SSL_REDIRECT = False
+DISABLE_ENGINE = False
 
 WEB_SQLITE_PATH = os.path.join(BASE_DIR, 'db', 'web.db')
 
