--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2024.2.2 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==42.0.4 ; python_version >= "3.10" and python_version < "4.0"
-dart-data @ git+https://github.com/rschwiebert/dart_data.git@b10492302ff59b71b6e3ade698584c0f1e649e2f ; python_version >= "3.10" and python_version < "4.0"
+dart-data @ git+https://github.com/rschwiebert/dart_data.git@582bd070fabd45cb81c8f8e9a979983eb63d6edf ; python_version >= "3.10" and python_version < "4.0"
 dj-database-url==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
 django-mathfilters==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -22,12 +22,12 @@ mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 packaging==24.0 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.3.0 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2==2.9.3 ; python_version >= "3.10" and python_version < "4.0"
-pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
+pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
 pyopenssl==24.0.0 ; python_version >= "3.10" and python_version < "4.0"
-python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2021.3 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
-requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.32.2 ; python_version >= "3.10" and python_version < "4.0"
 s3transfer==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
 six==1.11.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
