--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ dart-data @ git+https://github.com/rschwiebert/dart_data.git@26c7e054441104f5214
 dj-database-url==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
 django-mathfilters==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
-django-publications==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
+django-publications==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
 django-ratelimit==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
-django-recaptcha==2.0.6 ; python_version >= "3.10" and python_version < "4.0"
+django-recaptcha==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 django-registration-redux==2.9 ; python_version >= "3.10" and python_version < "4.0"
-django==3.2.24 ; python_version >= "3.10" and python_version < "4.0"
+django==4.0 ; python_version >= "3.10" and python_version < "4.0"
 gunicorn==22.0.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -32,6 +32,7 @@ s3transfer==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
 six==1.11.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.10" and python_version < "4.0"
+tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
 urllib3==1.26.18 ; python_version >= "3.10" and python_version < "4.0"
 wheel==0.38.1 ; python_version >= "3.10" and python_version < "4.0"
 whitenoise==5.0.1 ; python_version >= "3.10" and python_version < "4"
