--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ requests = "^2.32.2"
 cryptography = "42.0.4"
 pyopenssl = "24.0.0"
 wheel = "0.38.1"
+certifi = "2024.7.4"
+urllib3 = "1.26.19"
 
 [tool.poetry.dev-dependencies]
 
