--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pyopenssl = "24.0.0"
 wheel = "0.38.1"
 certifi = "2024.7.4"
 urllib3 = "1.26.19"
+tzdata = "^2024.2"
 
 [tool.poetry.dev-dependencies]
 
