--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ s3transfer==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
 six==1.11.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.10" and python_version < "4.0"
-tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
+tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==1.26.19 ; python_version >= "3.10" and python_version < "4.0"
 wheel==0.38.1 ; python_version >= "3.10" and python_version < "4.0"
 whitenoise==5.0.1 ; python_version >= "3.10" and python_version < "4"
