--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-asgiref = "3.5.1"
+asgiref = "3.6.0"
 boto3 = "1.24.0"
 dj-database-url = "0.5.0"
-Django = "3.2.24"
+Django = "4.2.16"
 django-mathfilters = "0.4.0"
-django-publications = "1.1.0"
+django-publications = "1.2.0"
 django-ratelimit = "2.0.0"
-django-recaptcha = "2.0.6"
+django-recaptcha = "3.0.0"
 django-registration-redux = "2.9"
 gunicorn = "22.0.0"
 model-mommy = "1.6.0"
@@ -33,6 +33,9 @@ requests = "^2.32.2"
 cryptography = "42.0.4"
 pyopenssl = "24.0.0"
 wheel = "0.38.1"
+certifi = "2024.7.4"
+urllib3 = "1.26.19"
+tzdata = "^2024.2"
 
 [tool.poetry.dev-dependencies]
 
