Updating python package deps and heroku runtime

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ django-publications = "1.2.0"
 django-ratelimit = "2.0.0"
 django-recaptcha = "3.0.0"
 django-registration-redux = "2.9"
-gunicorn = "22.0.0"
+gunicorn = "23.0.0"
 model-mommy = "1.6.0"
 mpmath = "1.3.0"
 Pillow = "10.3.0"
@@ -30,12 +30,13 @@ dart-data = {git = "https://github.com/rschwiebert/dart_data.git", rev = "26c7e0
 psycopg2 = "2.9.3"
 django-heroku = "0.3.1"
 requests = "^2.32.2"
-cryptography = "42.0.4"
+cryptography = "42.0.8"
 pyopenssl = "24.0.0"
 wheel = "0.38.1"
 certifi = "2024.7.4"
 urllib3 = "1.26.19"
 tzdata = "^2024.2"
+setuptools = "70.0.0"
 
 [tool.poetry.dev-dependencies]
 
