--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ botocore==1.27.96 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.7.4 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
-cryptography==42.0.4 ; python_version >= "3.10" and python_version < "4.0"
+cryptography==42.0.8 ; python_version >= "3.10" and python_version < "4.0"
 dart-data @ git+https://github.com/rschwiebert/dart_data.git@26c7e054441104f5214922bbf1654c255eec26d7 ; python_version >= "3.10" and python_version < "4.0"
 dj-database-url==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 django-heroku==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -14,7 +14,7 @@ django-ratelimit==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 django-recaptcha==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 django-registration-redux==2.9 ; python_version >= "3.10" and python_version < "4.0"
 django==4.2.16 ; python_version >= "3.10" and python_version < "4.0"
-gunicorn==22.0.0 ; python_version >= "3.10" and python_version < "4.0"
+gunicorn==23.0.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 model-mommy==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -29,6 +29,7 @@ pytz==2021.3 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
 s3transfer==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==70.0.0 ; python_version >= "3.10" and python_version < "4.0"
 six==1.11.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.10" and python_version < "4.0"
